When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 

17th Feb 2021
- USER (dev): Software version number in recipe is now the Git branch and commit hash
- USER (dev): PMT auto-on is disabled each time the scanner is armed. i.e. each time a tile scan is done.
- USER (dev): Z-stage homes automatically when user goes to 0 mm from a position greater than 20 mm. 
             NOTE: the above can be disabled by a new setting. Information on this is presented when
             the software starts. You will need to add SYSTEM.homeZjackOnZeroMove=0 to systemSettings.yml
             to disable the behavior or SYSTEM.homeZjackOnZeroMove=1 to disable warning message but retain
             the new behavior.

10th Feb 2021
- USER (dev): support report can now be generated from the Tools menu.
- USER (dev): fix bug related to numOverlapZPlanes recipe setting being stuck at >0 once it's been changed.
- USER (dev): do not start auto-trim if user simply closes the auto-trim dialog.
- USER (dev): SIBT settings removed from componentSettings.m


9th Feb 2021
- USER (dev/prerelease): fix bug relate to acquisition resume on reso scanner systems. 
- USER (dev/prerelease): autoROI uses the lowest wavelength channel. NOTE: requires channels to be named in ScanImage: "Red", "Green", "Blue"


8th Feb 2021
- USER (dev/prerelease): acquisition resume now applies more scanner settings than before. e.g. spatial fill fraction, pixel integration values (galvo), and scanner offsets. 
- USER: various bug-fixes to acquisition resume.
- USER: "Recipe" button displays "LOADING" during acquisition resumes that are slow.


6th Feb 2021